---
source: e2e/tests/golden-tests.rs
expression: query_result
---
 plan 
------
 1..4
(1 row)

                        is                         
---------------------------------------------------
 ok 1 - default metric retention period is 90 days
(1 row)

 get_or_create_metric_table_name 
---------------------------------
 (1,cpu_usage,t)
(1 row)

 set_metric_retention_period 
-----------------------------
 t
(1 row)

                             is                              
-------------------------------------------------------------
 ok 2 - get_metric_retention_period returns retention period
(1 row)

                             is                              
-------------------------------------------------------------
 ok 3 - get_metric_retention_period returns retention period
(1 row)

 set_default_retention_period 
------------------------------
 t
(1 row)

                                 is                                  
---------------------------------------------------------------------
 ok 4 - get_default_metric_retention_period returns retention period
(1 row)

 finish 
--------
(0 rows)


